--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-gray-100">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="/favicon.png" />
+		<!-- <link rel="icon" href="/favicon.png" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Frappe Insights</title>
+		<title>Expy BASES.GG</title>
 		<script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 	</head>
 	<body class="h-full">
